--- a/DemoClient/DemoClient.csproj
+++ b/DemoClient/DemoClient.csproj
@@ -49,6 +49,9 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+    <None Include="DemoClient.pfx">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\SocketClientServerLib\SocketClientServerLib.csproj">
