--- a/DmoServer/DmoServer.csproj
+++ b/DmoServer/DmoServer.csproj
@@ -51,6 +51,9 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+    <None Include="DemoServer.pfx">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\SocketClientServerLib\SocketClientServerLib.csproj">
