--- a/SocketClientServerLib/SocketClientServerLib.csproj
+++ b/SocketClientServerLib/SocketClientServerLib.csproj
@@ -34,6 +34,7 @@
     <Reference Include="System.Core" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ClientReconnectWorker.cs" />
     <Compile Include="ClientSessionBase.cs" />
     <Compile Include="HeartbeatPacket.cs" />
     <Compile Include="HeartbeatWorker.cs" />
